@@ -56,6 +56,7 @@ admin.caption.metadescriptionhelp=The HTML meta description is a description of 
 admin.caption.nonadminmove=Permettre aux non-administrateurs de d\u00E9placer des sujets
 admin.caption.parser=Analyseur
 admin.caption.persistence=Persistance
+admin.caption.printnewwindow=Open printable page links in new window
 admin.caption.recentchanges=Recharger les changements r\u00E9cents
 admin.caption.recentchangesdefault=Default number of recent changes displayed
 admin.caption.recentchangesfail=Failure while loading recent changes\: {0}.
