@@ -56,6 +56,7 @@ admin.caption.metadescriptionhelp=The HTML meta description is a description of 
 admin.caption.nonadminmove=Sz\u00F3cikkek mozgat\u00E1s\u00E1nak enged\u00E9lyez\u00E9se nem adminisztr\u00E1torok sz\u00E1m\u00E1ra
 admin.caption.parser=Sz\u00F6vegelemz\u0151
 admin.caption.persistence=Megtart\u00E1s
+admin.caption.printnewwindow=Open printable page links in new window
 admin.caption.recentchanges=Friss v\u00E1ltoz\u00E1sok sikeresen bet\u00F6ltve.
 admin.caption.recentchangesdefault=Alap\u00E9rtelmezettk\u00E9nt megjelen\u00EDtett v\u00E1ltoz\u00E1sok sz\u00E1ma
 admin.caption.recentchangesfail=Hiba t\u00F6rt\u00E9nt a friss v\u00E1ltoz\u00E1sok bet\u00F6lt\u00E9se k\u00F6zben\: {0}.
