@@ -56,6 +56,7 @@ admin.caption.metadescriptionhelp=De "HTML meta description" is een beschrijving
 admin.caption.nonadminmove=Niet-beheerders toestaan titels te wijzigen
 admin.caption.parser=Parser
 admin.caption.persistence=Persistentie
+admin.caption.printnewwindow=Open printable page links in new window
 admin.caption.recentchanges=Herlaad recente wijzigingen\r\n
 admin.caption.recentchangesdefault=Standaard aantal weer te geven recente pagina's
 admin.caption.recentchangesfail=Fout tijdens het laden van de recente wijzigingen\: {0}.
