@@ -56,6 +56,7 @@ admin.caption.metadescriptionhelp=The HTML meta description is a description of 
 admin.caption.nonadminmove=Zezwalaj innym u\u017Cytkownikom ni\u017C administratorzy na przenoszenie stron
 admin.caption.parser=Parser
 admin.caption.persistence=Spos\u00F3b zapisu danych
+admin.caption.printnewwindow=Open printable page links in new window
 admin.caption.recentchanges=Od\u015Bwie\u017C ostatnie zmiany
 admin.caption.recentchangesdefault=Domy\u015Blna liczba wy\u015Bwietlanych ostatnich zmian
 admin.caption.recentchangesfail=Niepowodzenie podczas wczytywania ostatnich zmian\: {0}.
